@@ -51,6 +51,12 @@ high value (e.g. 10,000)
 This extends the support already included for EC2 buildslaves to include any
 virtualization platform supported by libvirt.
 
+** Canceling Pending Builds for a Change
+
+Change pages on the webstatus now have buttons to cancel any pending
+builds that include that change (across all builders). The corresponding
+authz privledge to control access to this feature is 'stopChange'.
+
 ** New Change source
 
 *** CVSMaildirSource
